themes/openstack/css/community-bis.css
.banner {
    background-color: #248ec7;
    padding: 0 50px 50px 50px;
    color: white;
    font-size: 1.2em;
}

.banner .banner-text-wrapper {
    margin-top: 50px;
}

.banner .banner-img-wrapper {
    text-align: center;
    margin-top: 20px;
}

.banner img {
    position: relative;
}

.banner h2 {
    font-size: 2em;
    color: white;
}

.banner-button, .banner-button:visited {
    background-color: #30739c;
    font-size: 1.1em;
    padding: 10px 20px;
    margin-top: 20px;
    color:#fff;
}

.contribute-title {
    text-align: center;
    font-size: 1.8em;
    color: #30739c;
    margin: 50px;
}

.collapsing {
    transition: height 0.8s;
}

.nav-button-box {
    text-align: center;
}

.nav-button {
    color: #30739c;
    text-align: center;
    cursor: pointer;
}

.nav-button:hover {
    text-decoration: none;
}

.nav-button div {
    margin-top: 10px;
    font-weight: 600;
    font-style: italic;
    font-size: 1.2em;
}

.nav-button .fa {
    width: 80px;
    height: 75px;
    font-size: 2.2em;
    border: 1px solid #30739c;
    border-radius: 5px;
    line-height: 71px;
}

.nav-button .fa:hover {
    color: white;
    background-color: #58a935;
}

.nav-button .fa.active {
    color: white;
    background-color: #58a935;
}

.project-groups {
    padding: 40px 40px 0 40px;
    margin-top: 60px;
    border-top: 1px solid #d3dee9;
}

.project-groups h4 {
    color: #3a7a1e;
    font-size: 1.7em;
    font-weight: bold;
    margin-bottom: 30px;
}

.project-groups .col-md-4 {
    margin-bottom: 20px;
}

.project-groups .btn {
    font-style: italic;
    color: #3a7a1e;
    border-color: #3a7a1e;
    background-color: #f6fff2;
    font-size: 1.2em;
    width: 100%;
    text-align: left;
    font-weight: bold;
    height: 45px;
    line-height: 30px;
}

.project-groups-selected {
    display: none;
    margin-top: 40px;
    margin-bottom: 40px;
    border-top: 1px solid #d3dee9;
    padding-top: 30px;
}

.project-groups-selected .project-group-button-selected {
    width: 90%;
    background-color: #58a935;
    font-weight: bold;
    height: 45px;
    line-height: 30px;
    font-style: italic;
    font-size: 1.2em;
    margin-top: 10px;
}

.project-options {
    border-top: 1px solid #d3dee9;
}

.project-options .subtitle {
    margin-bottom: 30px;
}

.project-button {
    width: 100%;
    background-color: #f9fcff;
    height: 50px;
    color: #30739c;
    border-color: #30739c;
    font-size: 1.6em;
    text-align: left;
    margin-bottom: 30px;
}

.project-button:hover {
    background-color: #e4edff;
    border-color: #30739c;
}

.where-to-start {
    padding: 50px;
    margin-top: 50px;
    color: white;
    background-image: url('/themes/openstack/images/community/bg.png');
}

.where-to-start h2 {
    color: white;
    font-weight: 600;
    font-size: 1.8em;
}

.where-to-start .start-options {
    margin-top: 20px;
}

.where-to-start .start-option {
    background-color: #79c674;
    padding: 10px 10px;
    color: white;
    font-style: italic;
    margin-top: 2px;
    border-radius: 0px;
    width: 85%;
    min-width: 330px;
    text-align: left;
}

.where-to-start .start-option .fa {
    font-size: 2em;
    margin: 0 10px 0 0px;
}

.where-to-start .start-option span {
    top: -5px;
    position: relative;
}

.help {
    margin-top: 40px;
}

.help .help-header {
    text-align: center;
    padding: 0 20%;
    color: #3979a0;
    margin-bottom: 30px;
}

.help .help-header .help-title {
    text-align: center;
    font-size: 2.2em;
    color: #2b4d68;
    margin: 20px;
}

.help h4{
    font-weight: bold;
    color: #2b4d68;
    margin-bottom: 30px;
}

.help .help-managers {
    margin-bottom: 50px;
}

.help .help-managers .community-manager img {
    width: 180px;
    height: 185px;
}

.help .help-managers .community-manager {
    color: #3979a0 ;
    font-size: 1.1em;
    float: left;
    width: 20%;
}

.community-manager:last-of-type {
    float: none !important;
    display: inline;
}

.help .help-managers .community-manager .manager-name {
    font-weight: bold;
    margin-top: 10px;
}

.manager-name, .manager-title, .manager-location {
    line-height: 18px;
}

.help .help-ambassadors {
    margin-bottom: 50px;
    clear: both;
}

.help .help-ambassadors .ambassador img {
    width: 160px;
    height: 165px;
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.help .help-ambassadors .ambassador {
    color: #3979a0 ;
    font-size: 1em;
    float: left;
    width: 16%;
    height: 230px;
    margin-right: 0.66%;
    margin-bottom: 30px;
}

.help .help-ambassadors .ambassador .ambassador-name {
    font-weight: bold;
    margin-top: 10px;
}

.ambassador-name, .ambassador-location {
    line-height: 18px;
    height: 20px;
}

.ambassador-twitter-veil {
    width: 160px;
    height: 165px;
    background-color: rgba(0,0,0,0.5);
    display: none;
    position: relative;
    top: -215px;
    left: 0px;
    text-align: center;
    padding-top: 65px;
    color: white;
}

.ambassador-twitter-veil i {
    font-size: 20px;
}

.communicate {
    background-color: #63bb5e;
    color: white;
    padding: 30px 100px;
}

.communicate .communicate-header {
    text-align: center;
    margin-bottom: 20px;
}

.communicate .communicate-title {
    text-align: center;
    font-size: 2.5em;
    margin-bottom: 20px;
}

.communicate .communicate-item .communicate-item-title {
    font-weight: bold;
    font-size: 1.2em;
    border-bottom: 1px solid white;
    padding-bottom: 5px;
    margin-right: 75px;
}

.communicate .communicate-item {
    margin-bottom: 55px;
}

.communicate .communicate-item a {
    color: white;
    text-decoration: none;
}

.communicate .sign-up-wrapper {
    margin-top: 10px;
}

.communicate .sign-up-input {
    padding: 23px;
    margin-top: 15px;
    width: 70%;
}

.communicate .sign-up-submit {
    background-color: #276024;
    margin-top: 15px;
    padding: 12px;
    font-size: 16px;
    font-weight: bold;
    width: 106px;
}
/* ... */

